# govee

./: Makefile
plots/: .gitignore  Makefile  border.gnuplot  days_of_month.gnuplot  function.gnuplot  gobee-log.gnuplot  govee-single.gnuplot  govee-today.gnuplot  govee.gnuplot  heading.gnuplot  location.gnuplot
src/: CMakeLists.txt
src/hci_logger/: CMakeLists.txt  main.cpp  parse_govee_payload.cpp  parse_govee_payload.hpp
